fix: resolve theme toggle and layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@
 @theme inline {
   --color-brand-foreground: var(--brand-foreground);
     --color-brand: var(--brand);
-    --font-heading: var(--font-sans);
-    --font-sans: var(--font-sans);
+    --font-heading: var(--font-cairo), var(--font-geist), sans-serif;
+    --font-sans: var(--font-cairo), var(--font-geist), sans-serif;
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -50,8 +50,8 @@
 }
 
 :root {
-    --brand-foreground: 0 0% 0%; /* أسود */
-    --brand:rgb(0, 208, 145);
+    --brand-foreground: oklch(0 0 0);
+    --brand: rgb(0, 208, 145);
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
     --card: oklch(1 0 0);
@@ -87,7 +87,7 @@
 }
 
 .dark {
-  --brand-foreground: 0 0% 100%; /* أبيض */
+    --brand-foreground: oklch(1 0 0);
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.205 0 0);
